--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,6 +1,6 @@
 <%- await include('partials/header.ejs', { title: 'My Website' }) %>
 
-<h1>My Oak Website!</h1>
+<h1>About</h1>
 <article>
   <div class="flex">
     <div>
